Fixes an overrelease issue.

--- a/ClientAPIBOX/ObjectiveC/TWWeather/zh-Hant.lproj/Localizable.strings
+++ b/ClientAPIBOX/ObjectiveC/TWWeather/zh-Hant.lproj/Localizable.strings
@@ -44,7 +44,7 @@
 "You cannot send email now" = "您現在無法寄送郵件";
 
 /* No comment provided by engineer. */
-"Your device does not supprt to make a phone call, please use a telephone or cellphone to dial the number." = "您請另外使用市內電話或是行動電話撥打氣象查詢號碼。";
+"Your device does not supprt to make a phone call, please use a telephone or cellphone to dial the number." = "請另外使用市內電話或是行動電話撥打氣象查詢號碼。";
 
 /* No comment provided by engineer. */
 "Your mail is sent!" = "郵件已寄出！";
