Adds a link to the "week page" from the 48 hours forecast page.

--- a/ClientAPIBOX/ObjectiveC/TWWeather/English.lproj/Localizable.strings
+++ b/ClientAPIBOX/ObjectiveC/TWWeather/English.lproj/Localizable.strings
@@ -50,3 +50,5 @@
 "Your mail is sent!" = "Your mail is sent!";
 
 "Back" = "Back";
+
+"Data comes from Central Weather Bureau\n\n" = "Data comes from Central Weather Bureau\n\n";
