--- a/ClientAPIBOX/ObjectiveC/TWWeather/English.lproj/Localizable.strings
+++ b/ClientAPIBOX/ObjectiveC/TWWeather/English.lproj/Localizable.strings
@@ -32,7 +32,7 @@
 "Thanks for your feedback." = "Thanks for your feedback.";
 
 /* No comment provided by engineer. */
-"TW Weather Questions/Inquery" = "TW Weather Questions/Inquery";
+"TW Weather Questions/Inquiry" = "TW Weather Questions/Inquiry";
 
 /* No comment provided by engineer. */
 "Version: %@\n%@" = "Version: %1$@\n%2$@";
