--- a/ClientAPIBOX/ObjectiveC/TWWeather/zh-Hant.lproj/Localizable.strings
+++ b/ClientAPIBOX/ObjectiveC/TWWeather/zh-Hant.lproj/Localizable.strings
@@ -32,7 +32,7 @@
 "Thanks for your feedback." = "感謝您的來信";
 
 /* No comment provided by engineer. */
-"TW Weather Questions/Inquery" = "台灣天氣意見反應";
+"TW Weather Questions/Inquiry" = "台灣天氣意見反應";
 
 /* No comment provided by engineer. */
 "Version: %@\n%@" = "版本: %1$@\n%2$@";
