--- a/ClientAPIBOX/ObjectiveC/TWWeather/English.lproj/Localizable.strings
+++ b/ClientAPIBOX/ObjectiveC/TWWeather/English.lproj/Localizable.strings
@@ -52,3 +52,4 @@
 "Back" = "Back";
 
 "Data comes from Central Weather Bureau\n\n" = "Data comes from Central Weather Bureau\n\n";
+"Failed to open web page." = "Failed to open web page.";
