Adjusts the layout of the iPhone app.

--- a/ClientAPIBOX/ObjectiveC/TWWeather/English.lproj/Localizable.strings
+++ b/ClientAPIBOX/ObjectiveC/TWWeather/English.lproj/Localizable.strings
@@ -53,3 +53,4 @@
 
 "Data comes from Central Weather Bureau\n\n" = "Data comes from Central Weather Bureau\n\n";
 "Failed to open web page." = "Failed to open web page.";
+"Forecasts" = "Forecasts";
