Adds BGM and related setting page.

--- a/ClientAPIBOX/ObjectiveC/TWWeather/English.lproj/Localizable.strings
+++ b/ClientAPIBOX/ObjectiveC/TWWeather/English.lproj/Localizable.strings
@@ -54,3 +54,5 @@
 "Data comes from Central Weather Bureau\n\n" = "Data comes from Central Weather Bureau\n\n";
 "Failed to open web page." = "Failed to open web page.";
 "Forecasts" = "Forecasts";
+"Settings" = "Settings";
+"BGM" = "BGM";
