--- a/ClientAPIBOX/ObjectiveC/TWWeather/zh-Hant.lproj/Localizable.strings
+++ b/ClientAPIBOX/ObjectiveC/TWWeather/zh-Hant.lproj/Localizable.strings
@@ -54,3 +54,5 @@
 "Data comes from Central Weather Bureau\n\n" = "資料來源：中央氣象局\n\n";
 "Failed to open web page." = "無法開啟網頁";
 "Forecasts" = "天氣預報";
+"Settings" = "設定";
+"BGM" = "背景音樂";
