Adds a method to save the forecast images.

--- a/ClientAPIBOX/ObjectiveC/TWWeather/English.lproj/Localizable.strings
+++ b/ClientAPIBOX/ObjectiveC/TWWeather/English.lproj/Localizable.strings
@@ -71,3 +71,5 @@
 "Do you want to connect now?" = "Do you want to connect now?"; 
 "Connect" = "Connect";
 "Successfully connected on Facebook!" = "Successfully connected on Facebook!";
+"Failed to save your image." = "Failed to save your image.";
+"Save" = "Save";
