Updates copyright info.

--- a/ClientAPIBOX/ObjectiveC/TWWeather/English.lproj/Localizable.strings
+++ b/ClientAPIBOX/ObjectiveC/TWWeather/English.lproj/Localizable.strings
@@ -73,3 +73,4 @@
 "Successfully connected on Facebook!" = "Successfully connected on Facebook!";
 "Failed to save your image." = "Failed to save your image.";
 "Save" = "Save";
+"The image is saved!" = "The image is saved!";
