--- a/ClientAPIBOX/ObjectiveC/TWWeather/zh-Hant.lproj/Localizable.strings
+++ b/ClientAPIBOX/ObjectiveC/TWWeather/zh-Hant.lproj/Localizable.strings
@@ -72,3 +72,4 @@
 "Successfully connected on Facebook!" = "與 Facebook 連線成功！";
 "Failed to save your image." = "天氣雲圖儲存失敗";
 "Save" = "儲存";
+"The image is saved!" = "天氣雲圖儲存完畢！";
