Refactors the table view to set the favorite locations.

--- a/ClientAPIBOX/ObjectiveC/TWWeather/English.lproj/Localizable.strings
+++ b/ClientAPIBOX/ObjectiveC/TWWeather/English.lproj/Localizable.strings
@@ -74,3 +74,4 @@
 "Failed to save your image." = "Failed to save your image.";
 "Save" = "Save";
 "The image is saved!" = "The image is saved!";
+"Add..." = "Add..."; 
