Implements more works to handle logging in/out plurk.

--- a/ClientAPIBOX/ObjectiveC/TWWeather/English.lproj/Localizable.strings
+++ b/ClientAPIBOX/ObjectiveC/TWWeather/English.lproj/Localizable.strings
@@ -64,7 +64,7 @@
 
 "Basic Settings" = "Basic Settings";
 "Social Network" = "Social Network";
-"You can share the forecasts with your friends via Facebook!" = "You can share the forecasts with your friends via Facebook!";
+"You can share the forecasts with your friends via Facebook and Plurk!" = "You can share the forecasts with your friends via Facebook and Plurk!";
 "Share via Facebook" = "Share via Facebook";
 "Share via Plurk" = "Share via Plurk";
 
