--- a/ClientAPIBOX/ObjectiveC/TWWeather/zh-Hant.lproj/Localizable.strings
+++ b/ClientAPIBOX/ObjectiveC/TWWeather/zh-Hant.lproj/Localizable.strings
@@ -61,7 +61,7 @@
 
 "Basic Settings" = "基本設定";
 "Social Network" = "社群網路";
-"You can share the forecasts with your friends via Facebook!" = "您可以將天氣資訊張貼到 Facebook 上，提醒您的好朋友！";
+"You can share the forecasts with your friends via Facebook and Plurk!" = "您可以將天氣資訊張貼到 Facebook 與 Plurk 上，提醒您的好朋友注意天氣！";
 "Share via Facebook" = "Facebook 分享";
 "Share via Plurk" = "Plurk 分享";
 
