Beefs up the plurk login view.

--- a/ClientAPIBOX/ObjectiveC/TWWeather/English.lproj/Localizable.strings
+++ b/ClientAPIBOX/ObjectiveC/TWWeather/English.lproj/Localizable.strings
@@ -97,3 +97,5 @@
 "Posting your message..." = "Posting your message...";
 "You did not login Plurk." = "You did not login Plurk.";
 "Do you want to login now?" = "Do you want to login now?";
+"Please input your Plurk login name." = "Please input your Plurk login name.";
+"Please input your Plurk password." = "Please input your Plurk password.";
