--- a/ClientAPIBOX/ObjectiveC/TWWeather/zh-Hant.lproj/Localizable.strings
+++ b/ClientAPIBOX/ObjectiveC/TWWeather/zh-Hant.lproj/Localizable.strings
@@ -98,3 +98,5 @@
 
 "Please input your Plurk login name." = "請輸入您的 Plurk 帳號";
 "Please input your Plurk password." = "請輸入您的 your Plurk 密碼";
+"Unable to upload image to Facebook." = "無法將圖片上傳至 Facebook";
+"Unable to upload image to Plurk." = "無法將圖片上傳至 Plurk.";
