--- a/ClientAPIBOX/ObjectiveC/TWWeather/zh-Hant.lproj/InfoPlist.strings
+++ b/ClientAPIBOX/ObjectiveC/TWWeather/zh-Hant.lproj/InfoPlist.strings
@@ -1,3 +1,3 @@
 ﻿CFBundleName = "台灣天氣";
 CFBundleDisplayName = "台灣天氣";
-NSHumanReadableCopyright = "Copyright © 2009 Weizhong Yang. 版權所有";
+NSHumanReadableCopyright = "Copyright © 2009 - 2010 Weizhong Yang. 版權所有";
